overflow fix ya spat

--- a/css/defaults.css
+++ b/css/defaults.css
@@ -27,6 +27,7 @@ body,html {
 
         font-family: 'Oswald', sans-serif;
 
+        overflow-x: clip;
 
          /* width */
 
